# compile-win-rust

./: Cargo.toml
.github/workflows/: build.yml
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
src/: main.rs
