[package]
name = "client"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Windows client for remote command execution"
license = "MIT"
repository = "https://github.com/your/repo"

# 编译为 Windows 可执行文件
[target.'cfg(target_os = "windows")'.dependencies]
winreg = { version = "0.11", features = ["serde"] }

[dependencies]
# 跨平台依赖
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
#anyhow = "1.0"
#thiserror = "1.0"
#log = "0.4"
#env_logger = "0.9"
#tokio = { version = "1.0", features = ["full"] }
#bytes = "1.0"
#futures = "0.3"
#clap = { version = "3.0", features = ["derive"] }

# 加密通信支持 (可选)
# openssl = { version = "0.10", optional = true }
# rustls = { version = "0.20", optional = true }

[features]
default = []
# tls = ["openssl"]
# rustls = ["dep:rustls"]

[build]
target = "x86_64-pc-windows-msvc"  # 默认编译为 Windows 目标
